--- a/07_projects/01_backgroundchange.html
+++ b/07_projects/01_backgroundchange.html
@@ -82,30 +82,25 @@
             //     body.style.backgroundColor = "yellow";
             // }
 
+
             switch (e.target.id) {
                 case 'grey':
-                    body.style.backgroundColor = "grey";
-                    body.style.color = 'black';
+                    body.style.backgroundColor = e.target.id;
                     break;
                 case 'white':
-                    body.style.backgroundColor = "white";
-                    body.style.color = 'black';
+                    body.style.backgroundColor = e.target.id;
                     break;
                 case 'blue':
-                    body.style.backgroundColor = "blue";
-                    body.style.color = 'white';
+                    body.style.backgroundColor = e.target.id;
                     break;
                 case 'yellow':
-                    body.style.backgroundColor = "yellow";
-                    body.style.color = 'black';
+                    body.style.backgroundColor = e.target.id;
                     break;
                 case 'green':
-                    body.style.backgroundColor = "green";
-                    body.style.color = 'black';
+                    body.style.backgroundColor = e.target.id;
                     break;
                 case 'red':
-                    body.style.backgroundColor = "red";
-                    body.style.color = 'black';
+                    body.style.backgroundColor = e.target.id;
                     break;
                 
             }
